overlays/magi/home/routes/frigate-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
spec:
  parentRefs:
    - name: home-gateway
      sectionName: https
  hostnames:
    - cameras.vbalex.com
  rules:
    - backendRefs:
        - name: frigate
          port: 8971
