overlays/magi/home/routes/homeassistant-http-redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-http-redirect
spec:
  parentRefs:
    - name: home-gateway
      sectionName: http
  hostnames:
    - assistant.vbalex.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
