overlays/magi/home/routes/homeassistant-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant
spec:
  parentRefs:
    - name: home-gateway
      sectionName: https
  hostnames:
    - assistant.vbalex.com
  rules:
    - backendRefs:
        - name: homeassistant
          port: 8123
